dashboard/dashboard-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx-controller
    app.kubernetes.io/part-of: ingress-nginx-controller
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: tcp-4443
      port: 4443
      targetPort: 4443
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx-controller
    app.kubernetes.io/part-of: ingress-nginx-controller
